--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Salem baby</h1>
 <img src="https://yt3.ggpht.com/ytc/AKedOLQkd6ZpnXpwrMK3BSvgwYBryQofNjmzTvTzpVaq8w=s900-c-k-c0x00ffffff-no-rj"alt="">
-
+nconvert -overwrite -resize 50% 50% *.URL
