--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@
         height="320"/>
 <h2>I wish u good mood and to be my gf</h2>
 <h2>If u wanna to make me absessed with u Leave ur PN <p>&#128512;</p></h2>
-
+<form>
+  <label for="PN">Phone number:</label><br>
+  <input type="text" id="не тормози детка" name="не тормози детка"><br>
+  <label for="name"> name:</label><br>
+  <input type="text" id="name" name="name">
+</form>
+<h1 style="background-color:DodgerBlue;">Wait me bb<p>&#128512;</p> </h1>
+<p style="background-color:red;">Lorem ipsum...</p>
 
