--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <h2>If u wanna to make me absessed with u Leave ur PN <p>&#128512;</p></h2>
 <form>
   <label for="PN">Phone number:</label><br>
-  <input type="text" id="не тормози детка" name="не тормози детка"><br>
+  <input type="text" id="PN" name="PN"><br>
   <label for="name"> name:</label><br>
   <input type="text" id="name" name="name">
 </form>
-<h1 style="background-color:DodgerBlue;">Wait me bb<p>&#128512;</p> </h1>
+<h1 style="background-color:DodgerBlue;">Wait me bb<p>&#128151;</p> </h1>
 <p style="background-color:red;">Lorem ipsum...</p>
 
