--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
 <h1>Salem baby</h1>
 <img src="https://yt3.ggpht.com/ytc/AKedOLQkd6ZpnXpwrMK3BSvgwYBryQofNjmzTvTzpVaq8w=s900-c-k-c0x00ffffff-no-rj"alt="Shrek" width="320"
         height="320"/>
@@ -11,4 +17,6 @@
 </form>
 <h1 style="background-color:DodgerBlue;">Wait me bb<p>&#128151;</p> </h1>
 <p style="background-color:red;">Lorem ipsum...</p>
-
+<p style="font-size:48px">
+&#128512; &#128516; &#128525; &#128151;
+</p>
