--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <input type="text" id="name" name="name">
 </form>
 <h1 style="background-color:DodgerBlue;">Wait me bb<p>&#128151;</p> </h1>
-<p style="background-color:red;">Lorem ipsum...</p>
+<p style="background-color:red;">НЕ ТОРМОЗИ ДЕТКА...</p>
 <p style="font-size:48px">
 &#128512; &#128516; &#128525; &#128151;
 </p>
