--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <label for="name"> name:</label><br>
   <input type="text" id="name" name="name">
 </form>
-<h1 style="background-color:DodgerBlue;">Wait me bb<p>&#128151;</p> </h1>
-<p style="background-color:red;">НЕ ТОРМОЗИ ДЕТКА...</p>
+<h1 style="background-color:pink;">Wait me bb<p>&#128151;</p> </h1>
+<p style="background-color:yellowishpink;">НЕ ТОРМОЗИ ДЕТКА...</p>
 <p style="font-size:48px">
 &#128512; &#128516; &#128525; &#128151;
 </p>
