--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Salem baby</h1>
 <img src="https://yt3.ggpht.com/ytc/AKedOLQkd6ZpnXpwrMK3BSvgwYBryQofNjmzTvTzpVaq8w=s900-c-k-c0x00ffffff-no-rj"alt="Shrek" width="320"
         height="320"/>
-<h2>I wish u good mood and to be my gf</h2>
+<h2>I wish u a good mood and to be my gf</h2>
 <h2>If u wanna to make me absessed with u Leave ur PN <p>&#128512;</p></h2>
 <form>
   <label for="PN">Phone number:</label><br>
@@ -20,3 +20,8 @@
 <p style="font-size:48px">
 &#128512; &#128516; &#128525; &#128151;
 </p>
+<div>
+        <h1>want yo know who i am? What kinda boy im?</h1>
+<h2>ok i will give u some information about myself</h2>
+<h3>My name is Andrey.Im 7y old. Nowadays i am studying in Oxfort</h3>
+<link <link rel="mw de href="https://ru.wikipedia.org/wiki/%D0%9E%D0%BA%D1%81%D1%84%D0%BE%D1%80%D0%B4%D1%81%D0%BA%D0%B8%D0%B9_%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82">
