--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img src="https://yt3.ggpht.com/ytc/AKedOLQkd6ZpnXpwrMK3BSvgwYBryQofNjmzTvTzpVaq8w=s900-c-k-c0x00ffffff-no-rj"alt="Shrek" width="320"
         height="320"/>
 <h2>I wish u a good mood and to be my gf</h2>
-<h2>If u wanna to make me absessed with u Leave ur PN <p>&#128512;</p></h2>
+<h2>If u wanna make me absessed with u Leave ur PN <p>&#128512;</p></h2>
 <form>
   <label for="PN">Phone number:</label><br>
   <input type="text" id="PN" name="PN"><br>
