added new projects

--- a/html/schedule/festival.html
+++ b/html/schedule/festival.html
@@ -19,7 +19,7 @@
         font-size: 36px;
         padding: 15px;
         color: #5b488c;
-        background-color: rgb(119, 255, 0);
+        background-color: rgb(212, 255, 0);
       }
 
       h2 {
@@ -49,7 +49,7 @@
       }
 
       td {
-        border: 2px solid #9dde0f;
+        border: 2px solid #d8f806;
         width: 300px;
       }
 
@@ -65,7 +65,7 @@
       footer h3 {
         display: inline-block;
         font-size: 14px;
-        background-color: #94ee0c;
+        background-color: #e4f800;
       }
 
       .container {
