--- a/html/blogs/resume.html
+++ b/html/blogs/resume.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="resume.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +12,10 @@
         <table>
             <tr>
                 <td>
-                    <img src="https://kartinkof.club/uploads/posts/2022-04/1649922206_4-kartinkof-club-p-rzhachnie-kartinki-lyudei-ugar-5.jpg" width="127">
+                    <img src="https://avatars.mds.yandex.net/get-images-cbir/2808554/dRf2iJRRJjihMJMyfazrQw7710/ocr" width="300">
                 </td>
             <td>
-                <h1>Дядя Петя</h1>
+                <h1>Urkumbay Nuray</h1>
             </td>
             </tr>
         </table>
@@ -30,7 +31,7 @@
                     <h3>Full Name:</h3>
                 </td>
                 <td>
-                    <p> Дядя Петя</p>
+                    <p>Urkumbay Nuray Shyngyskhankyzy</p>
                 </td>
             </tr>
             <tr>
@@ -46,7 +47,7 @@
                    <h3>Contact:</h3>
                 </td>
                 <td>
-                   <p>555-789-097</p>
+                   <p>+77073198521</p>
                 </td>
             </tr>
             <tr>
@@ -54,7 +55,7 @@
                     <h3>Address:</h3>
                 </td>
                 <td>
-                    <p>I live inside of the Sportacus's plane</p>
+                    <p>Taraz city,st:Pushkina 154</p>
                 </td>
             </tr>
     
@@ -65,7 +66,7 @@
     <section>
         <h2>Sumarry</h2>
         <hr>
-        <p>The dream of all grandmothers. Sporty ,handsome ,young and healthy guy.I don’t drink and don’t smoke. Worked for Google and was popular among the people of Africa. was Shakira’s best friend.</p>
+        <p>. Sporty ,fit ,flexible and healthy girl.I don’t drink and don’t smoke.Ican easily make friends it means i can work in a team. Also my English level is B1 it will be C1 at the end of this semester.I have done many projects and games by Thunkable etc. </p>
     </section>
     <br>
     <!--work experience-->
@@ -75,18 +76,26 @@
         <table border="2px">
             <tr>
                 <td>
-                    <strong>Aug 2007 - Present</strong> 
+                    <strong>Sept. 2023 Present</strong> 
                 </td>
                 <td>
-                    hguhvbhgfvbfvjfbvhfgvhfvbnbfhvbfhvhfv hbhvfhfn hv vhbfvhbfdhvhvfhvbfbbvfvbhfbvhbfhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+                    i cleaned the dormitary
                 </td>
             </tr>
             <tr>
                 <td>
-                    <strong>Oct 2015 - - Present</strong>
+                    <strong>Oct 2023  Present</strong>
                 </td>
                 <td>
-                    eufhvgfebvfhkvbfvhjfbvhjrvfkhfbvkhefjbchervbjhervbhbvgevgefvbdfvfhvshvbjsbvhjfvhbvabvhadgviuhvhmdbkwgviwrhv
+                   I cleaned the bathroom.
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <strong>Every week -every day 2023  Present</strong>
+                </td>
+                <td>
+                   I passed maaaaanyyy exams.
                 </td>
             </tr>
         </table>
@@ -99,12 +108,11 @@
         <table>
             <tr>
                 <td>
-                    <strong>2012-2016</strong>
+                    <strong>2011-Present</strong>
                 </td>
                 <td>
-                    <p>High School Vinks
-                        Magic world School,
-                        Toerel,PIA </p>
+                    <p>№1 school Gym;
+                        Jambyl Inovational High College(JIHC) </p>
                 </td>
             </tr>
         </table>
@@ -116,16 +124,16 @@
         <hr>
         <h3>Hard Skills</h3>
         <ul>
-            <li>.....</li>
-            <li>.....</li>
-            <li>,,,,.,</li>
-            <li>.....</li>
+            <li>Flexible</li>
+            <li>Hard-working</li>
+            <li>Responsible</li>
+            <li>Free</li>
         </ul>
         <h3>Soft Skills</h3>
         <ul>
-            <li>.....</li>
-            <li>.....</li>
-            <li>.....</li>
+            <li>Friendly</li>
+            <li>Polite</li>
+            <li>Creative</li>
         </ul>
         </td>
         </tr>
