added a new file

--- a/html/blogs/resume.html
+++ b/html/blogs/resume.html
@@ -7,12 +7,12 @@
     <title>Resume</title>
 </head>
 <body>
-    <!--header-->
+ <!--header-->
     <header>
         <table>
             <tr>
                 <td>
-                    <img src="https://avatars.mds.yandex.net/get-images-cbir/2808554/dRf2iJRRJjihMJMyfazrQw7710/ocr" width="300">
+                    <img src="https://web.whatsapp.com/e364338b-2cb7-4fa7-a55b-397933d5a32c" width="300">
                 </td>
             <td>
                 <h1>Urkumbay Nuray</h1>
@@ -68,6 +68,27 @@
         <hr>
         <p>. Sporty ,fit ,flexible and healthy girl.I don’t drink and don’t smoke.Ican easily make friends it means i can work in a team. Also my English level is B1 it will be C1 at the end of this semester.I have done many projects and games by Thunkable etc. </p>
     </section>
+      <!--skills-->
+      <section>
+        <h2>Skills</h2>
+        <hr>
+        <h3>Hard Skills</h3>
+        <ul>
+            <li>Flexible</li>
+            <li>Hard-working</li>
+            <li>Responsible</li>
+            <li>Free</li>
+        </ul>
+        <h3>Soft Skills</h3>
+        <ul>
+            <li>Friendly</li>
+            <li>Polite</li>
+            <li>Creative</li>
+        </ul>
+        </td>
+        </tr>
+       </table>
+    </section>
     <br>
     <!--work experience-->
     <section>
@@ -95,11 +116,12 @@
                     <strong>Every week -every day 2023  Present</strong>
                 </td>
                 <td>
-                   I passed maaaaanyyy exams.
+                   I passed maaaaanyyy exams and gave birth to eggs.
                 </td>
             </tr>
         </table>
     </section>
+    
     <br>
     <!--education-->
     <section>
@@ -118,26 +140,6 @@
         </table>
     </section>
     <br>
-    <!--skills-->
-    <section>
-        <h2>Skills</h2>
-        <hr>
-        <h3>Hard Skills</h3>
-        <ul>
-            <li>Flexible</li>
-            <li>Hard-working</li>
-            <li>Responsible</li>
-            <li>Free</li>
-        </ul>
-        <h3>Soft Skills</h3>
-        <ul>
-            <li>Friendly</li>
-            <li>Polite</li>
-            <li>Creative</li>
-        </ul>
-        </td>
-        </tr>
-       </table>
-    </section>
+  
 </body>
 </html>
