--- a/html/blogs/taraz.html
+++ b/html/blogs/taraz.html
@@ -38,14 +38,11 @@
             <p>
                Taraz attractions:
             </p>
-            <ol> 1. Мавзолей Айша Биби</ol>
-                
-               <ol>2. Дворцовый комплекс Акыртас VIII-IХ вв</ol> 
-               <ol>3. Мавзолей Карахан</ol> 
-               <ol>4. Архитектурный комплекс Тектурмас</ol>  
-               <ol>5. Мавзолей Бабаджа Хатун</ol> 
-               <ol> 6. Мавзолей Тектурмаса</ol>
-               <ol>7. Central Mosque</ol>
+         <ol>1. Мавзолей Айша Биби</ol>
+         <ol>2. Дворцовый комплекс Акыртас VIII-IХ вв.</ol>
+         <ol>3. Архитектурный комплекс Тектурмасю</ol>
+         <ol>4. Мавзолей Бабаджа Хатун</ol> 
+         <ol>5. Мавзолей Тектурмаса</ol>
         </aside>
         <section>
             <article>
@@ -64,11 +61,12 @@
             <audio controls>
                <source src="https://121d609d6b2c1db">
             </audio>
+            <p>An ancient city on the site of the modern city of Taraz. The first information about this is mentioned in the message of the Greek ambassador Zemarchus, and in 630 Xuan Zang describes it as a major trading city. In the 7th-8th centuries, Taraz became a center of trade and crafts located on the Great Silk Road. Here, the caravan routes to the silver mines of the south and the mountains in the Negev met. Al-Maqdisi, an Arab geographer of the 10th century, wrote: "Taraz is a large fortified city with many gardens, densely populated, deep moats dug outside the castle, four gates and settlements around it." Taraz was located on the site of the modern city of Taraz for the first time . V. Bartholdproved. Later, archaeologists M. E. Masson, A. N. Bernshtam, E. I. Ageeva, G. I. Pacevich, T. N. The Senigovas determined the size of the city, its structure, and the thickness of its cultural layers. As a result, life in Taraz b.c. It was concluded that it appeared in the 1st century and lived until the 16th century.</p>
         </section>
     </main>
     <footer>
         <p>Posted by Petuniya </p>
         <p>Inst:@_titoshkaa</p>
-      </footer>
+    </footer>
 </body>
 </html>
