--- a/html/blogs/wikipedia/desert.html
+++ b/html/blogs/wikipedia/desert.html
@@ -1,56 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="desert.css">
 <head>
 <meta charset="UTF-8">
+<title>
+  Desert
+</title>
 </head>
-<body>
-        
-<title>Desert</title>
-<h4>From Wikipedia, the free encyclopedia</h4>
-<div>
-    <h3>Not to be confused with dessert.
-</div>
-<h3>This article is about dry terrain. For arid climate, see desert climate. For the act of abandoning or withdrawing support, see desertion. For other uses, see Desert (disambiguation).</h3>
-<p>A desert is a barren area of landscape where little precipitation occurs and, consequently, living conditions are hostile for plant and animal life. The lack of vegetation exposes the unprotected surface of the ground to denudation. About one-third of the land surface of the Earth is arid or semi-arid. This includes much of the polar regions, where little precipitation occurs, and which are sometimes called polar deserts or "cold deserts". Deserts can be classified by the amount of precipitation that falls, by the temperature that prevails, by the causes of desertification or by their geographical location.[1]</p>=$0
-<p>A <b>desert</b> is a barren area of <a href="/wiki/Landscape" title="Landscape">landscape</a> where little <a href="/wiki/Precipitation" title="Precipitation">precipitation</a> occurs and, consequently, living conditions are hostile for plant and animal life. The lack of vegetation exposes the unprotected surface of the ground to <a href="/wiki/Denudation" title="Denudation">denudation</a>. About one-third of the land surface of the Earth is <a href="/wiki/Arid" title="Arid">arid</a> or <a href="/wiki/Semi-arid_climate" title="Semi-arid climate">semi-arid</a>. This includes much of the <a href="/wiki/Polar_regions_of_Earth" title="Polar regions of Earth">polar regions</a>, where little precipitation occurs, and which are sometimes called <a href="/wiki/Polar_desert" title="Polar desert">polar deserts</a> or "cold deserts". Deserts can be classified by the amount of precipitation that falls, by the temperature that prevails, by the causes of <a href="/wiki/Desertification" title="Desertification">desertification</a> or by their geographical location.<sup id="cite_ref-1" class="reference"><a href="#cite_note-1">[1]</a></sup>
-</p>
-<img src="https://cdn.britannica.com/52/156452-004-B810282F.jpg"alt="Libiyan Desert" width="420"
-        height="320"/>
-<h3>Deserts are formed by weathering processes as large variations in temperature between day and night put strains on the rocks, which consequently break in pieces. Although rain seldom occurs in deserts, there are occasional downpours that can result in flash floods. Rain falling on hot rocks can cause them to shatter, and the resulting fragments and rubble strewn over the desert floor are further eroded by the wind. This picks up particles of sand and dust, which can remain airborne for extended periods – sometimes causing the formation of sand storms or dust storms. Wind-blown sand grains striking any solid object in their path can abrade the surface. Rocks are smoothed down, and the wind sorts sand into uniform deposits. The grains end up as level sheets of sand or are piled high in billowing sand dunes. Other deserts are flat, stony plains where all the fine material has been blown away and the surface consists of a mosaic of smooth stones, often forming desert pavements, and little further erosion takes place. Other desert features include rock outcrops, exposed bedrock and clays once deposited by flowing water. Temporary lakes may form and salt pans may be left when waters evaporate. There may be underground sources of water, in the form of springs and seepages from aquifers. Where these are found, oases can occur.</h3>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Valle_della_Luna_01.jpg/600px-Valle_della_Luna_01.jpg"alt="El Valle de la Luna" width="420"
-   height="320"/>
-<h3>Plants and animals living in the desert need special adaptations to survive in the harsh environment. Plants tend to be tough and wiry with small or no leaves, water-resistant cuticles, and often spines to deter herbivory. Some annual plants germinate, bloom and die in the course of a few weeks after rainfall, while other long-lived plants survive for years and have deep root systems able to tap underground moisture. Animals need to keep cool and find enough food and water to survive. Many are nocturnal, and stay in the shade or underground during the heat of the day. They tend to be efficient at conserving water, extracting most of their needs from their food and concentrating their urine. Some animals remain in a state of dormancy for long periods, ready to become active again during the rare rainfall. They then reproduce rapidly while conditions are favorable before returning to dormancy.</h3>
-
-<title>Etymology</title>
-<h3>English desert and its Romance cognates (including Italian and Portuguese deserto, French désert and Spanish desierto) all come from the ecclesiastical Latin dēsertum (originally "an abandoned place"), a participle of dēserere, "to abandon".[2] The correlation between aridity and sparse population is complex and dynamic, varying by culture, era, and technologies; thus the use of the word desert can cause confusion. In English before the 20th century, desert was often used in the sense of "unpopulated area", without specific reference to aridity;[2] but today the word is most often used in its climate-science sense (an area of low precipitation).[3] Phrases such as "desert island"[4] and "Great American Desert", or Shakespeare's "deserts of Bohemia" (The Winter's Tale) in previous centuries did not necessarily imply sand or aridity; their focus was the sparse population.[5]</h3>
-<title>Major deserts</title>
-<a href="/wiki/List_of_deserts_by_area" title="List of deserts by area">List of deserts by area</a>
-<img alt="global map of deserts" src="//upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Deserts.png/660px-Deserts.png" decoding="async" width="660" height="220" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Deserts.png/990px-Deserts.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Deserts.png/1320px-Deserts.png 2x" data-file-width="2184" data-file-height="728">
-<p>Deserts take up about one third of Earth's land surface.[6] Bottomlands may be salt-covered flats. Eolian processes are major factors in shaping desert landscapes. Polar deserts (also seen as "cold deserts") have similar features, except the main form of precipitation is snow rather than rain. Antarctica is the world's largest cold desert (composed of about 98% thick continental ice sheet and 2% barren rock). Some of the barren rock is to be found in the so-called Dry Valleys of Antarctica that almost never get snow, which can have ice-encrusted saline lakes that suggest evaporation far greater than the rare snowfall due to the strong katabatic winds that even evaporate ice.</p>
-<caption>
-<b>The ten largest deserts</b>
-<sup id="cite_ref-7" class="reference"><a href="#cite_note-7">[7]</a></sup>
-</caption>
-<table>
-    <tr>
-      <th>Desert</th>
-      <th>Area (km2)</th>
-      <th>Area(sqmi)</th>
-    </tr>
-    <tr>
-      <td>Antarctic Desert (Antarctica)</td>
-      <td>14,200,000</td>
-      <td>5,482,651</td>
-    </tr>
-    <tr>
-      <td>Arctic Desert (Arctic)</td>
-      <td>13,900,000</td>
-      <td>5,366,820</td>
-    </tr>
-    <tr>
-        <td>Great Australian (Australia)</td>
-        <td>2,700,000</td>
-        <td>1,042,476</td>
-    </tr>
-  </table>
-
+<h4>sdfsdfsdf</h4>
+<body>      
+   <h4 class="test" id="testid">From Wikipedia, the free encyclopedia</h4>
+</body>
