--- a/html/blogs/taraz.html
+++ b/html/blogs/taraz.html
@@ -12,9 +12,9 @@
     
     <nav>
         <ul>
-            <li><a href="Blog"></a></li>
-            <li><a href="Media"></a></li>
-            <li><a href="About"></a></li>
+            <li>Blog<a href="Blog"></a></li>
+            <li>Media<a href="Media"></a></li>
+            <li>About<a href="About"></a></li>
         </ul>
     </nav>
 </header>
