--- a/html/blogs/tea.html
+++ b/html/blogs/tea.html
@@ -78,7 +78,7 @@
         <div class="locations">
           <h3>East Bayside</h3>
           <p>3433 Phisherman's Avenue</p>
-          <p>(Northwest Corner)</p>
+          <p>(Northwest Corner)</p>*
           <p>Portland, Maine</p>
         </div>
         <div class="locations">
