--- a/html/blogs/wikipedia/camera.html
+++ b/html/blogs/wikipedia/camera.html
@@ -69,7 +69,7 @@
             <div class="feature-2">
                <img src="https://github.com/darkhanzhursin/mini-ws/blob/main/jihc_ws/resources/images/feature-2.png?raw=true" alt="">
                <div class="Petya">
-                    <h1>Beautifully crafted, ...</h1>
+                    <h1>Beautifully crafted with the leather and djwddbcwbedche .</h1>
                     <p>From the paint outside to the tiny screw inside, Fotomat is crafted with love and 20-year of expertise</p>
                </div>
             </div>
@@ -84,15 +84,15 @@
 
 
     <figure class="figure">
-        <div class="bao">
+        <div class="pepa">
             <h1>+20 filters to choose form</h1>
         </div>
-        <div class="mao">
+        <div class="popa">
             <p>Feed your creativity with 20 different filter designed by
                 our electric in-house photographers. 
             </p>
         </div>
-        <div class="ocop-img">
+        <div class="wer">
             <img src="https://github.com/darkhanzhursin/mini-ws/blob/main/jihc_ws/resources/images/filter-1.png?raw=true" alt="">
             <img src="https://github.com/darkhanzhursin/mini-ws/blob/main/jihc_ws/resources/images/filter-2.png?raw=true" alt="">
             <img src="https://github.com/darkhanzhursin/mini-ws/blob/main/jihc_ws/resources/images/filter-3.png?raw=true" alt="">
@@ -100,7 +100,7 @@
         </div>
     </figure>
 
-    <div class="patok">
+    <div class="eee">
         <p>"It's truely something that cloud create a brend new photography Reanaisanse"</p>
        <img src="https://github.com/darkhanzhursin/mini-ws/blob/main/jihc_ws/resources/images/photography-logo.png?raw=true" alt="">
     </div>
